moved to jdk 20. Updated some dependency and mvn plugin